--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "byron-kline": "^11.0.3",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-kline": "^2.0.3",
     "react-native-webview": "^10.4.0"
   },
   "devDependencies": {
